objects/GEMS_Attachment__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Case__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttachmentUrl__c</fullName>
        <label>AttachmentUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BA_Info__c</fullName>
        <label>BA Info</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>GEMS  Attachments</relationshipLabel>
        <relationshipName>GEMS_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>File_Creation_Date__c</fullName>
        <label>File Creation Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Last_Modified_Date__c</fullName>
        <label>File Last Modified Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Modified_By__c</fullName>
        <label>File Modified By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_URL__c</fullName>
        <label>File URL</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <inlineHelpText>The Level tells user whether account level or Benefit agreement level</inlineHelpText>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Submission</fullName>
                    <default>true</default>
                    <label>Account Submission</label>
                </value>
                <value>
                    <fullName>Benefit Agreement</fullName>
                </value>
                <value>
                    <fullName>--None--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SharePointExtId__c</fullName>
        <label>SharePointExtId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABS</fullName>
                </value>
                <value>
                    <fullName>ACA CALCULATORS</fullName>
                </value>
                <value>
                    <fullName>ACCOUNT CHANGE REQUEST FORM</fullName>
                </value>
                <value>
                    <fullName>ACCOUNT STRUCTURE</fullName>
                </value>
                <value>
                    <fullName>ACH/WIRE FORM</fullName>
                </value>
                <value>
                    <fullName>ADDENDUM TO BPA FOR AFFILIATES</fullName>
                </value>
                <value>
                    <fullName>ADMINISTRATIVE SERVICE AGREEMENT</fullName>
                </value>
                <value>
                    <fullName>ASO AGREEMENT</fullName>
                </value>
                <value>
                    <fullName>ASO BENEFIT PROG APP (BPA)</fullName>
                </value>
                <value>
                    <fullName>ASO MANDATE CHECKLIST</fullName>
                </value>
                <value>
                    <fullName>BENEFIT ADHOC MEETING MINUTES</fullName>
                </value>
                <value>
                    <fullName>BENEFIT BOOKLETS / CERTIFICATES</fullName>
                </value>
                <value>
                    <fullName>BENEFIT EDIT TOOL</fullName>
                </value>
                <value>
                    <fullName>BENEFIT MATRIX</fullName>
                </value>
                <value>
                    <fullName>BENEFIT PROG DESCRIPTION-DENTAL</fullName>
                </value>
                <value>
                    <fullName>BENEFIT PROGRAM DESCRIPTION-BPD</fullName>
                </value>
                <value>
                    <fullName>BENEFIT WALLET DISCOVERY FORM</fullName>
                </value>
                <value>
                    <fullName>BINDER CHECK</fullName>
                </value>
                <value>
                    <fullName>BPA - ASO SIGNED</fullName>
                </value>
                <value>
                    <fullName>BPA - ASO UNSIGNED</fullName>
                </value>
                <value>
                    <fullName>BPA - DENTAL SIGNED</fullName>
                </value>
                <value>
                    <fullName>BPA - DENTAL UNSIGNED</fullName>
                </value>
                <value>
                    <fullName>BPA - HCA SIGNED</fullName>
                </value>
                <value>
                    <fullName>BPA - HCA UNSIGNED</fullName>
                </value>
                <value>
                    <fullName>BPA - HEALTH SIGNED</fullName>
                </value>
                <value>
                    <fullName>BPA - HEALTH UNSIGNED</fullName>
                </value>
                <value>
                    <fullName>BPA - SIGNED</fullName>
                </value>
                <value>
                    <fullName>BPA - UNSIGNED</fullName>
                </value>
                <value>
                    <fullName>BPS</fullName>
                </value>
                <value>
                    <fullName>BROKER TRANS/AOR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>IF( ISBLANK(Attachment__c) , HYPERLINK(AttachmentUrl__c,&quot;View&quot;) , HYPERLINK (&quot;/servlet/servlet.FileDownload?file=&quot;+Attachment__c,&quot;View&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>GEMS Attachments</label>
    <nameField>
        <label>Attachment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GEMS  Attachments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>